Updates from Overleaf

--- a/paper/Gaponov2022InterpretableRNN.tex
+++ b/paper/Gaponov2022InterpretableRNN.tex
@@ -34,7 +34,7 @@
 \date{}
 \maketitle
 \begin{abstract}
-Рассматривается задача интерпретации рекуррентных нейронных сетей. Под интерпретируемостью модели понимается возможность получить линейную зависимость выходных данных от входных. Предлагается обобщить метод OpenBox, предназначенный для интерпретации нейронных сетей с кусочно-линейными функциями активации. В данном методе нейронная сеть представляется в виде ансамбля интерпретируемых линейных классификаторов, каждый из которых определён на выпуклом многограннике. Поэтому интерпретации близких объектов согласованны. Для проверки работоспособности предложенного метода проводится эксперимент на выборке IMDB Review dataset.
+Рассматривается задача интерпретации рекуррентных нейронных сетей. Под интерпретируемостью модели понимается возможность получить линейную зависимость выходных данных от входных. Предлагается обобщить метод OpenBox, предназначенный для интерпретации нейронных сетей с кусочно-линейными функциями активации. В данном методе нейронная сеть представляется в виде ансамбля интерпретируемых линейных классификаторов, каждый из которых определён на выпуклом многограннике, поэтому интерпретации близких объектов согласованны. Для анализа качества предложенного метода проводится эксперимент на выборке IMDB Review dataset.
 \end{abstract}
 \renewcommand{\abstractname}{Abstract}
 \begin{abstract}
@@ -44,24 +44,24 @@ The problem of interpretation of recurrent neural networks is considered. The in
 \keywords{Интерпретация моделей \and Рекуррентные нейронные сети \and Кусочно-линейные модели}
 
 \section{Введение}
-В работе рассматривается метод интерпретации рекуррентных моделей глубокого обучения. Такие модели используются для обработки последовательностей данных \cite{lipton2015critical}. Однако из-за большого числа слоёв в нейронной сети она работает по принципу "чёрного ящика". То есть нет явной зависимости выходных данных от входных. Работа посвящена построению и выбору таких интерпретируемых моделей для рекуррентных нейронных сетей с кусочно-линейными функциями активации.
+В работе рассматривается метод интерпретации рекуррентных моделей глубокого обучения. Такие модели используются для обработки последовательностей данных \cite{lipton2015critical}. Однако из-за большого числа слоёв в нейронной сети она работает по принципу "чёрного ящика". То есть нет явной зависимости выходных данных от входных. Работа посвящена построению и выбору интерпретируемых моделей для рекуррентных нейронных сетей с кусочно-линейными функциями активации.
 
-Рекуррентная нейронная сеть представляет из себя последовательность из слоёв нейронов: входного слоя, скрытых слоёв и выходного слоя \cite{sherstinsky2020fundrnn}. Отличительной особенностью от нейронных сетей являются циклические связи между нейронами. Такие связи позволяют запоминать состояния для обработки последовательностей данных.
+Рекуррентная нейронная сеть представляет последовательность слоёв нейронов: входного слоя, скрытых слоёв и выходного слоя \cite{sherstinsky2020fundrnn}. Отличительной особенностью от нейронных сетей являются циклические связи между нейронами. Такие связи позволяют запоминать состояния для обработки последовательностей данных.
 
-Интерпретация должна быть \textbf{точной} и \textbf{согласованной} \cite{chu2019exact}. Интерпретация называется точной, предсказания интерпретируемой модели похожи на предсказания исходной. Интерпретация называется согласованной, если интерпретации близких объектов похожи, то есть значимости признаков близки.
+Интерпретация должна быть \textbf{точной} и \textbf{согласованной} \cite{chu2019exact}. Интерпретация называется точной, если предсказания интерпретируемой модели похожи на предсказания исходной. Интерпретация называется согласованной, если интерпретации близких объектов похожи, то есть значимости признаков близки.
 
 Анализ зависимости предсказания модели от входных данных в рекуррентных нейронных сетях --- открытая проблема. Методы, рассмотренные в работах \cite{dosovitskiy2016inverting, zhou2018interpreting, NIPS2014_ea8fcd92, bastani2019interpreting, zhou2015learning, simonyan2014deep} являются либо неточными, то есть построенные интерпретируемые модели не отвечают поведению исходной модели, либо несогласованными, то есть значимости признаков для близких объектов значительно отличаются.
 
-В работах \cite{dosovitskiy2016inverting, zhou2018interpreting} рассмотрены методы, основанные на интерпретации признаков, выученных скрытыми слоями. Такой подход отражает поведение скрытых слоёв, но не показывает поведение сети в целом. В работах \cite{NIPS2014_ea8fcd92, bastani2019interpreting} предлагаются методы подражания модели. В этом подходе строится модель с похожим на исходную поведением. Построенная модель имеет более простую структуру, поэтому проще интерпретируется. Однако из-за недостаточно сложной структуры построенная модель недостаточно хорошо приближает исходную. Наконец, в работах \cite{zhou2015learning, simonyan2014deep} рассмотрены методы локальной интерпретации, в которых происходит анализ поведения модели в окрестности исходного объекта. В таком подходе получается точная интерпретация одного объекта, однако интерпретации близких объектов могут существенно отличаться. Таким образом, данный подход не предоставляет согласованные интерпретации.
+В работах \cite{dosovitskiy2016inverting, zhou2018interpreting} рассмотрены методы, основанные на интерпретации признаков, выученных скрытыми слоями. Такой подход отражает поведение скрытых слоёв, но не показывает поведение сети в целом. В работах \cite{NIPS2014_ea8fcd92, bastani2019interpreting} предлагаются методы подражания модели. В этом подходе строится модель с похожим на исходную поведением. Построенная модель имеет более простую структуру, поэтому проще интерпретируется. Однако из-за недостаточно сложной структуры построенная модель плохо приближает исходную. Наконец, в работах \cite{zhou2015learning, simonyan2014deep} рассмотрены методы локальной интерпретации, в которых происходит анализ поведения модели в окрестности исходного объекта. В таком подходе получается точная интерпретация одного объекта, однако интерпретации близких объектов могут существенно отличаться. Таким образом, данный подход не предоставляет согласованные интерпретации.
 
-Предложенный в данной работе подход является обобщением метода OpenBox для интерпретации нейронных сетей с кусочно-линейными  функциями активации \cite{chu2019exact}. Нейронная сеть представляется в виде ансамбля линейных классификаторов. Каждый из них классифицирует объекты внутри выпуклого многогранника в пространстве признаков, поэтому интерпретации получаются согласованными.
+Предложенный в данной работе подход является обобщением метода OpenBox, предназначенного для интерпретации нейронных сетей с кусочно-линейными  функциями активации \cite{chu2019exact}. Нейронная сеть представляется в виде ансамбля линейных классификаторов. Каждый из них классифицирует объекты внутри выпуклого многогранника в пространстве признаков, поэтому интерпретации получаются согласованными.
 
 На выборке IMDB Movie Review Dataset \cite{maas-EtAl:2011:ACL-HLT2011} проведён вычислительный эксперимент для анализа качества метода, а также для проверки интерпретаций на точность и согласованность. 
 
 \section{Задача выбора интерпретируемых моделей}
 Рассмотрим рекуррентную нейронную сеть $\mathbf{f}(\mathbf{x})$ с кусочно-линейными функциями активации. Входные данные обозначим через $\mathbf{x} \in \mathbf{X}$, где $\mathbf{X} \subset \mathbb{R}^d$ --- пространство признаков. Выходные данные обозначим через $\mathbf{y} \in \mathbf{Y}$, где $\mathbf{Y} \subset \mathbb{R}^k$ --- пространство предсказаний.
 
-Модель представляет из себя функцию классификации $\mathbf{f}: \mathbf{X} \to \mathbf{Y}$. Из-за большого числа параметров невозможно получить явную зависимость значения функции $\mathbf{f}$ от аргумента $\mathbf{x}$.
+Модель является функцией $\mathbf{f}: \mathbf{X} \to \mathbf{Y}$. Из-за большого числа параметров невозможно получить явную зависимость значения функции $\mathbf{f}$ от аргумента $\mathbf{x}$.
 
 Требуется построить модель, соответствующую функции $\mathbf{g}$, которая обладает следующими свойствами.
 
@@ -70,10 +70,10 @@ The problem of interpretation of recurrent neural networks is considered. The in
 Также модель должна быть точной, то есть минимизировать \eqref{ft:exactness}
 
 \begin{equation}\label{ft:exactness}
-\int\limits_{\mathbf{X}}^{}{\left(\mathbf{f}(\mathbf{x}) - \mathbf{g}(\mathbf{x})\right)^2dx} \to \texttt{min}
+\int\limits_{\mathbf{X}}^{}{\left(\mathbf{f}(\mathbf{x}) - \mathbf{g}(\mathbf{x})\right)^2dx} \to \min_{\mathbf{g}}
 \end{equation}
 
-Также модель должна быть согласованной, то есть должно выполняться \eqref{ft:consistensy}
+Модель должна быть согласованной, то есть должно выполняться \eqref{ft:consistensy}
 \begin{equation}\label{ft:consistensy}
 \exists \varepsilon > 0\: \forall \mathbf{x}_1, \mathbf{x}_2 \in \mathbf{X}\: ||\mathbf{x}_1-\mathbf{x}_2||<\varepsilon \implies \frac{\partial{\mathbf{g}}}{\partial{\mathbf{x}}}(\mathbf{x}_1)=\frac{\partial{\mathbf{g}}}{\partial{\mathbf{x}}}(\mathbf{x}_2)
 \end{equation}
@@ -82,7 +82,7 @@ The problem of interpretation of recurrent neural networks is considered. The in
 
 \subsection{Метод OpenBox}
 
-Рассмотрим рекуррентную нейронную сеть $\mathbf{f}(\mathbf{x})$. Её можно представить в виде нейронной сети, заменив рекуррентные слои на последовательность обыкновенных слоёв нейронов. А именно, пусть дан слой рекуррентной нейронной сети состоящий из $n$ нейронов с кусочно-линейной функцией активации $f_i$. Обозначим число рекуррентных запусков данного слоя через $k$. Заменим в архитектуре нейронной сети данный слой на $k$ слоёв, состоящих из $n$ нейронов, с функциями активации $f_i$. Таким образом, нейронная сеть представляется в виде обыкновенной сети.
+Рассмотрим рекуррентную нейронную сеть $\mathbf{f}(\mathbf{x})$. Она представима в виде нейронной сети, если заменить рекуррентные слои на последовательность обыкновенных слоёв нейронов. А именно, пусть дан слой рекуррентной нейронной сети состоящий из $n$ нейронов с кусочно-линейной функцией активации $f_i$. Обозначим число рекуррентных запусков данного слоя через $k$. Заменим в архитектуре нейронной сети данный слой на $k$ слоёв, состоящих из $n$ нейронов, с функциями активации $f_i$. Таким образом, нейронная сеть представляется в виде обыкновенной сети.
 
 Для слоя с номером $i$
 
@@ -120,7 +120,7 @@ $\mathbf{b}_i~-$ вектор сдвига
 Также условие принадлежности аргумента $x$ интервалу $I_j~-$ это неравенство вида $p \leq x \leq q$.
 
 \begin{theorem}
-Пусть дана нейронная сеть $\mathbf{f}(\mathbf{x})$ с кусочно-линейными функциями активации $f_i$. Тогда её можно представить в виде набора линейных функций $F_1,\dots,F_n$, каждая из которых определена на выпуклом многограннике $P_1,\dots,P_n \subset \mathbf{X}$.
+Пусть дана нейронная сеть $\mathbf{f}(\mathbf{x})$ с кусочно-линейными функциями активации $f_i$. Тогда она представима в виде набора линейных функций $F_1,\dots,F_n$, каждая из которых определена на выпуклом многограннике $P_1,\dots,P_n \subset \mathbf{X}$.
 \end{theorem}
 \includegraphics[width=0.95\textwidth]{../figures/polys.jpg}
 \begin{proof}
@@ -128,7 +128,7 @@ $\mathbf{b}_i~-$ вектор сдвига
 
 Таким образом, найден выпуклый многогранник $P_h$ (пересечение семейства полупространств) и линейная функция $F_h$ (композиция линейных функций) такая, что выполнено следующее
 
-$$\forall \mathbf{x}\in P_h\: \mathbf{f}(\mathbf{x})=F_h(\mathbf{x})$$
+$$\forall \mathbf{x}\in P_h\; \mathbf{f}(\mathbf{x})=F_h(\mathbf{x})$$
 
 В силу произвольности выбора $\mathbf{x}_0$ получаем, что всё пространство $\mathbf{X}$ разбивается на выпуклые многогранники $P_h$, на которых заданы линейные функции $F_h$.
 
@@ -143,7 +143,7 @@ $$\forall \mathbf{x}\in P_h\: \mathbf{f}(\mathbf{x})=F_h(\mathbf{x})$$
 
 3. Интерпретацией модели на входном объекте $\mathbf{x}_0$ является набор коэффициентов линейного классификатора $F_h$, соответствующие им признаки, а также набор условий задающих $P_h$.
 
-Полученная интерпретируемая модель оказывается математически эквивалентна исходной, то есть выполнено свойство точности \eqref{ft:consistensy}.
+Полученная интерпретируемая модель оказывается математически эквивалентна исходной, то есть выполнено свойство точности \eqref{ft:exactness}.
 
 Также модель обладает свойством согласованности \eqref{ft:consistensy}, так как близкие объекты попадают в один и тот же выпуклый многогранник $P_h$, а значит, классифицируются одним и тем же линейным классификатором $F_h$.
 
@@ -159,7 +159,7 @@ $$\forall \mathbf{x}\in P_h\: \mathbf{f}(\mathbf{x})=F_h(\mathbf{x})$$
 
 2. Вычисляются предсказания $\mathbf{y}_1, \mathbf{y}_2, \dots, \mathbf{y}_n$ модели $\mathbf{f}$ на объектах $\mathbf{x}_1, \mathbf{x}_2, \dots, \mathbf{x}_n$. То есть $\mathbf{y}_i=\mathbf{f}(\mathbf{x}_i)$.
 
-3. Построение линейной модели $\mathbf{g}(\mathbf{x})$ с $K$ параметрами происходит при помощи метода наименьших квадратов с для объектов $\mathbf{x}_1, \mathbf{x}_2, \dots, \mathbf{x}_n$ и соответствующих им меток $\mathbf{y}_1, \mathbf{y}_2, \dots, \mathbf{y}_n$.  
+3. Построение линейной модели $\mathbf{g}(\mathbf{x})$ с $K$ параметрами происходит при помощи метода наименьших квадратов для объектов $\mathbf{x}_1, \mathbf{x}_2, \dots, \mathbf{x}_n$ и соответствующих им меток $\mathbf{y}_1, \mathbf{y}_2, \dots, \mathbf{y}_n$.  
 
 \section{Вычислительный эксперимент}
 
@@ -174,7 +174,7 @@ $$\forall \mathbf{x}\in P_h\: \mathbf{f}(\mathbf{x})=F_h(\mathbf{x})$$
 
 \includegraphics[width=0.95\textwidth]{figures/lime_exp.png}
 
-Подсвеченные слова сильнее всего влияют на результат. Как можно заметить, модель отнесла отзыв к положительному классу, основываясь на наличии слов \texttt{and, able, men, last}. Очевидно, что данные слова не влияют на характер отзыва. Таким образом, даже не учитывая значение метрики accuracy, можно сделать вывод, что модель непригодна для использования, так как совершает предсказания на основе нерелевантных признаков.
+Подсвеченные слова сильнее всего влияют на результат. Модель отнесла отзыв к положительному классу, основываясь на наличии слов \texttt{and, able, men, last}. Очевидно, что данные слова не влияют на характер отзыва. Таким образом, даже не учитывая значение метрики accuracy, понятно, что модель непригодна для использования, так как совершает предсказания на основе нерелевантных признаков.
 
 \includegraphics[width=0.95\textwidth]{figures/lime_exp2.png}
 
@@ -190,9 +190,9 @@ $$\forall \mathbf{x}\in P_h\: \mathbf{f}(\mathbf{x})=F_h(\mathbf{x})$$
 \end{itemize}
 
 \section{Анализ ошибки}
-Зафиксируем выборку размера 1000. Для каждого объекта сгенерируем похожий объект, заменяя некоторые слова на синонимы. Построим интерпретацию на текущем объекте и предскажем вероятность принадлежности к положительному классу для ближайшего объекта. Чем меньше полученная вероятность отличается от вероятности, которую предсказывает исходная модель, тем лучше.
+Зафиксируем выборку размера 1000. Для каждого объекта сгенерируем похожий объект, заменяя некоторые слова на синонимы. Построим интерпретацию на текущем объекте и предскажем вероятность принадлежности к положительному классу для похожего объекта. Чем меньше полученная вероятность отличается от вероятности, которую предсказывает исходная модель, тем лучше.
 
-Для метода LIME будем строить предсказывать вероятности не на ближайшем объекте, а на исходном.
+Для метода LIME будем строить предсказывать вероятности не на похожем объекте, а на исходном.
 
 \includesvg[width=0.9\textwidth]{../figures/lime_proba_est.svg}
 
@@ -206,11 +206,11 @@ $$\forall \mathbf{x}\in P_h\: \mathbf{f}(\mathbf{x})=F_h(\mathbf{x})$$
 
 \includesvg[width=0.9\textwidth]{../figures/openbox_proba_est.svg}
 
-Как видно из графика, есть улучшение по сравнению с методом LIME. Предсказанные вероятнсоти меньше отличаются от исходных.
+Как видно из графика, есть улучшение по сравнению с методом LIME. Предсказанные вероятности меньше отличаются от исходных.
 
 \includesvg[width=0.9\textwidth]{../figures/openbox_cosine.svg}
 
-График косинусного расстояния также показывает, что интерпретации полученные методом OpenBox являются согласованными. Есть лишь небольшая доля объектов, на которых наблюдается существенное различие между истинным предсказанием и предсказанием метода.
+График косинусного расстояния также показывает, что интерпретации, полученные методом OpenBox являются согласованными. Есть лишь небольшая доля объектов, на которых наблюдается существенное различие между истинным предсказанием и предсказанием метода.
 
 Вычислим метрики качества.
 
